terraform/manifests/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-deployment
  namespace: huan-gametetris-mp-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - name: tetris
        image: juannguyen0211/huan-gametetris-mp:latest
        ports:
        - containerPort: 80
      resources:
        requests:
          memory: "128Mi"
          cpu: "250m"
        limits:
          memory: "256Mi"
          cpu: "500m"
