terraform/manifests/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
  namespace: huan-gametetris-mp-ns
spec:
  selector:
    app: tetris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
